--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animejs": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
+    "react-spotify-web-playback": "^0.14.0",
+    "wavesurfer": "^1.3.4",
+    "wavesurfer.js": "^6.6.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
